--- a/glosario.html
+++ b/glosario.html
@@ -39,11 +39,11 @@
 
     <section>
         <!--Navbar superior-->
-        <div class="nav-superior cl1" id="nav-superior"></div>
+        <div class="nav-superior cl1" id="nav-superior"  style="background-color: #547264;"></div>
         <!--Navbar principal-->
         <nav>
-            <div class="nav-wrapper cl2">
-                <a href="index.html" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i
+            <div class="nav-wrapper cl2" style="background-color: #42584e;">
+                <a href="unidad1.html" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i
                         class="material-icons">arrow_back</i></a>
                 <a class="brand-logo titleUnity">Glosario</a>
             </div>
@@ -52,10 +52,10 @@
 
     <section class="browserContainer col s12 clw">
         <div class="browserContainer-inputContainer" id="browserContainer-inputContainer">
-            <div id="buttonBrowser"
+            <div  style="background-color: #7aa18e;" id="buttonBrowser"
                 class="buttonBrowserOwn waves-effect waves-light white-text material-icons cl5 shadow2">
                 search</div>
-            <input id="inputBrowser" type="text" onkeyup="buscar_concepto()"
+            <input  id="inputBrowser" type="text" onkeyup="buscar_concepto()"
                 class="browserContainer-inputContainer-input browser-default shadow2 clgreyl1 clbktx">
         </div>
 
