--- a/glosario2.html
+++ b/glosario2.html
@@ -39,10 +39,10 @@
 
     <section>
         <!--Navbar superior-->
-        <div class="nav-superior cl1" id="nav-superior"></div>
+        <div class="nav-superior cl1" id="nav-superior"  style="background-color: #a0686e;"></div>
         <!--Navbar principal-->
         <nav>
-            <div class="nav-wrapper cl2">
+            <div class="nav-wrapper cl2" style="background-color: #805458;">
                 <a href="unidad2.html" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i
                         class="material-icons">arrow_back</i></a>
                 <a class="brand-logo titleUnity">Glosario</a>
@@ -53,6 +53,7 @@
     <section class="browserContainer col s12 clw">
         <div class="browserContainer-inputContainer" id="browserContainer-inputContainer">
             <div id="buttonBrowser"
+                style="background-color: #e79fa8;;"
                 class="buttonBrowserOwn waves-effect waves-light white-text material-icons cl5 shadow2">
                 search</div>
             <input id="inputBrowser" type="text" onkeyup="buscar_concepto()"
