--- a/glosario5.html
+++ b/glosario5.html
@@ -39,11 +39,11 @@
 
     <section>
         <!--Navbar superior-->
-        <div class="nav-superior cl1" id="nav-superior"></div>
+        <div class="nav-superior cl1" id="nav-superior" style="background-color: #919bbd;"></div>
         <!--Navbar principal-->
         <nav>
-            <div class="nav-wrapper cl2">
-                <a href="unidad2.html" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i
+            <div class="nav-wrapper cl2" style="background-color: #78819e;">
+                <a href="unidad5.html" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i
                         class="material-icons">arrow_back</i></a>
                 <a class="brand-logo titleUnity">Glosario</a>
             </div>
@@ -53,6 +53,7 @@
     <section class="browserContainer col s12 clw">
         <div class="browserContainer-inputContainer" id="browserContainer-inputContainer">
             <div id="buttonBrowser"
+                style="background-color: #7e86a1;"
                 class="buttonBrowserOwn waves-effect waves-light white-text material-icons cl5 shadow2">
                 search</div>
             <input id="inputBrowser" type="text" onkeyup="buscar_concepto()"
