--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul class="right hide-on-med-and-down">
           <li id="a1tutorialButton"><a class='btn waves-effect waves-light border1 white-text cl4' href='polilibro.html'>Polilibro<i
                 class="material-icons right">menu_book</i></a></li>
-          <li id="a2tutorialButton"><a class='btn waves-effect waves-light border1 white-text cl4' href='glosario.html'>Glosario<i
+          <li id="a2tutorialButton"><a class='btn waves-effect waves-light border1 white-text cl4' href='SuperGlosario.html'>Glosario<i
                 class="material-icons right">library_books</i></a></li>
           <li id="a3tutorialButton"><a class='btn waves-effect waves-light border1 white-text cl3' href='contacto.html'>Contacto<i
                 class="material-icons right">alternate_email</i></a></li>
@@ -69,7 +69,7 @@
       <p class="textoTitulo white-text lateralMenuAdjustTextTitlePrincipal">Secciones</p>
       <li><a class="clbktx textoStandar clw border0 activeButtonTextLateralPrincipal" href="index.html"><i class="material-icons clbktx">home</i>Inicio</a></li>
       <li><a class="clbktx textoStandar clw border0" href="polilibro.html"><i class="material-icons clbktx">menu_book</i>Polilibro</a></li>
-      <li><a class="clbktx textoStandar clw border0" href="glosario.html"><i class="material-icons clbktx">library_books</i>Glosario</a></li>
+      <li><a class="clbktx textoStandar clw border0" href="SuperGlosario.html"><i class="material-icons clbktx">library_books</i>Glosario</a></li>
       <li><a class="clbktx textoStandar clw border0" href="contacto.html"><i class="material-icons clbktx">alternate_email</i>Contacto</a></li>
       <li><a class="clbktx textoStandar clw border0" href="manual.html"><i class="material-icons clbktx">help</i>Manual</a></li>
       <li><a class="clbktx textoStandar clw border0" href="configuracion.html"><i class="material-icons clbktx">settings</i>Configuración</a></li>
