--- a/unidad2.html
+++ b/unidad2.html
@@ -98,13 +98,13 @@
     <section class="fullUnity clgreyl1">
         <!--Contenidos principales de la unidad-->
         <section id="lateralUnityMenuBackOne" class="lateralUnityMenuBackOne menuLateralWidthShow"
-            style="background-color: #e79fa8;">
+            style="background-color: #F7C4CA;">
             <section id="lateralUnityMenuBackTwo" class="lateralUnityMenuBackTwo menuLateralWidthShow"
-                style="background-color: #b67b82;">
+                style="background-color: #E99DA5;">
                 <section id="lateralUnityMenuBackThree" class="lateralUnityMenuBackThree menuLateralWidthShow"
-                    style="background-color: #8a5d62;">
+                    style="background-color: #D77A86;">
                     <section id="lateralUnityMenuBackFour" class="lateralUnityMenuBackFour menuLateralWidthShow"
-                        style="background-color: #583b3e;">
+                        style="background-color: #BD6D77;">
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
 
@@ -170,7 +170,7 @@
 
                                 <a contador=""
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a9tutorialButton" href="glosario2.html">
+                                    id="a9tutorialButton" href="SuperGlosario.html">
                                     <i contador="" class="deskOption material-icons clbktx">library_books</i>
                                     <p contador="" class="deskOption clbktx">Glosario</p>
                                 </a>
@@ -262,7 +262,7 @@
 
                 <!--Pagina externa-->
                 <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="glosario.html"><i
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html"><i
                             class="material-icons clbktx">library_books</i>Glosario</a></li>
 
                 <li contador="8" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
@@ -336,24 +336,24 @@
 
     <a href="#" data-target="slide-out"
         class="border5 shadow2 white-text waves-effect waves-light buttonMenuMobile sidenav-trigger hide-on-large-only"
-        style="background-color: #8a5d62;"><i class="material-icons">menu</i></a>
+        style="background-color: #D77A86;"><i class="material-icons">menu</i></a>
     <a href="#" data-target="mobile-demo"
         class="border5 shadow2 white-text waves-effect waves-light buttonMenuMobile sidenav-trigger hide-on-med-and-down"
-        style="background-color: #8a5d62; width: 54px; height: 54px;">
+        style="background-color: #D77A86; width: 54px; height: 54px;">
         <i class="material-icons" id="menuIconUnityContent">close</i>
     </a>
 
     <!--Botones para la configuracion de los textos-->
     <a href="#" data-target="slide-fontAdjust"
         class="border5 shadow2 white-text waves-effect waves-light buttonFontAdjustMobile sidenav-trigger"
-        style="background-color: #775054; width: 54px; height: 54px;">
+        style="background-color: #E99DA5; width: 54px; height: 54px;">
         <i class="material-icons">text_format</i>
     </a>
 
     <!--Botones para la configuracion de la interfaz-->
     <a href="configuracion.html" data-target="slide-fontAdjust"
         class="border5 shadow2 white-text waves-effect waves-light buttonScreenAdjustMobile"
-        style="background-color: #442c2f; width: 54px; height: 54px;">
+        style="background-color: #BD6D77; width: 54px; height: 54px;">
         <i class="material-icons">settings</i>
     </a>
 
