--- a/unidad3.html
+++ b/unidad3.html
@@ -98,13 +98,13 @@
     <section class="fullUnity clgreyl1">
         <!--Contenidos principales de la unidad-->
         <section id="lateralUnityMenuBackOne" class="lateralUnityMenuBackOne menuLateralWidthShow"
-            style="background-color: #ebaceb;">
+            style="background-color: #D6C0F0;">
             <section id="lateralUnityMenuBackTwo" class="lateralUnityMenuBackTwo menuLateralWidthShow"
-                style="background-color: #ad7ead;">
+                style="background-color: #B19CD9;">
                 <section id="lateralUnityMenuBackThree" class="lateralUnityMenuBackThree menuLateralWidthShow"
-                    style="background-color: #755675;">
+                    style="background-color: #9A83C9;">
                     <section id="lateralUnityMenuBackFour" class="lateralUnityMenuBackFour menuLateralWidthShow"
-                        style="background-color: #4d394d;">
+                        style="background-color: #8470B3;">
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
                                 <a contador="0"
@@ -179,7 +179,7 @@
 
                                 <a contador=""
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a9tutorialButton" href="glosario3.html">
+                                    id="a9tutorialButton" href="SuperGlosario.html">
                                     <i contador="" class="deskOption material-icons clbktx">library_books</i>
                                     <p contador="" class="deskOption clbktx">Glosario</p>
                                 </a>
@@ -289,7 +289,7 @@
 
                 <!--Pagina externa-->
                 <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="glosario3.html"><i
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html"><i
                             class="material-icons clbktx">library_books</i>Glosario</a></li>
 
                 <li contador="8" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
@@ -363,24 +363,24 @@
 
     <a href="#" data-target="slide-out"
         class="border5 shadow2 white-text waves-effect waves-light buttonMenuMobile sidenav-trigger hide-on-large-only"
-        style="background-color: #755675;"><i class="material-icons">menu</i></a>
+        style="background-color: #9A83C9;"><i class="material-icons">menu</i></a>
     <a href="#" data-target="mobile-demo"
         class="border5 shadow2 white-text waves-effect waves-light buttonMenuMobile sidenav-trigger hide-on-med-and-down"
-        style="background-color: #755675; width: 54px; height: 54px;">
+        style="background-color: #9A83C9; width: 54px; height: 54px;">
         <i class="material-icons" id="menuIconUnityContent">close</i>
     </a>
 
     <!--Botones para la configuracion de los textos-->
     <a href="#" data-target="slide-fontAdjust"
         class="border5 shadow2 white-text waves-effect waves-light buttonFontAdjustMobile sidenav-trigger"
-        style="background-color: #5f455f; width: 54px; height: 54px;">
+        style="background-color: #B19CD9; width: 54px; height: 54px;">
         <i class="material-icons">text_format</i>
     </a>
 
     <!--Botones para la configuracion de la interfaz-->
     <a href="configuracion.html" data-target="slide-fontAdjust"
         class="border5 shadow2 white-text waves-effect waves-light buttonScreenAdjustMobile"
-        style="background-color: #5f485f; width: 54px; height: 54px;">
+        style="background-color: #8470B3; width: 54px; height: 54px;">
         <i class="material-icons">settings</i>
     </a>
 
