--- a/unidad4.html
+++ b/unidad4.html
@@ -98,13 +98,13 @@
     <section class="fullUnity clgreyl1">
         <!--Contenidos principales de la unidad-->
         <section id="lateralUnityMenuBackOne" class="lateralUnityMenuBackOne menuLateralWidthShow"
-            style="background-color: #ce7268;">
+            style="background-color: #F0A399;">
             <section id="lateralUnityMenuBackTwo" class="lateralUnityMenuBackTwo menuLateralWidthShow"
-                style="background-color: #9e5b53;">
+                style="background-color: #E88F84;">
                 <section id="lateralUnityMenuBackThree" class="lateralUnityMenuBackThree menuLateralWidthShow"
-                    style="background-color: #7a4741;">
+                    style="background-color: #D77A70;">
                     <section id="lateralUnityMenuBackFour" class="lateralUnityMenuBackFour menuLateralWidthShow"
-                        style="background-color: #53302c;">
+                        style="background-color: #C2695F;">
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
                                 <a contador="0"
@@ -177,7 +177,7 @@
 
                                 <a contador=""
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a9tutorialButton" href="glosario4.html">
+                                    id="a9tutorialButton" href="SuperGlosario.html">
                                     <i contador="" class="deskOption material-icons clbktx">library_books</i>
                                     <p contador="" class="deskOption clbktx">Glosario</p>
                                 </a>
@@ -287,7 +287,7 @@
 
                 <!--Pagina externa-->
                 <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="glosario4.html"><i
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html"><i
                             class="material-icons clbktx">library_books</i>Glosario</a></li>
 
                 <li contador="8" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
@@ -361,24 +361,24 @@
 
     <a href="#" data-target="slide-out"
         class="border5 shadow2 white-text waves-effect waves-light buttonMenuMobile sidenav-trigger hide-on-large-only"
-        style="background-color: #ce7268;"><i class="material-icons">menu</i></a>
+        style="background-color: #D77A70;"><i class="material-icons">menu</i></a>
     <a href="#" data-target="mobile-demo"
         class="border5 shadow2 white-text waves-effect waves-light buttonMenuMobile sidenav-trigger hide-on-med-and-down"
-        style="background-color: #ce7268; width: 54px; height: 54px;">
+        style="background-color: #D77A70; width: 54px; height: 54px;">
         <i class="material-icons" id="menuIconUnityContent">close</i>
     </a>
 
     <!--Botones para la configuracion de los textos-->
     <a href="#" data-target="slide-fontAdjust"
         class="border5 shadow2 white-text waves-effect waves-light buttonFontAdjustMobile sidenav-trigger"
-        style="background-color: #b6655c; width: 54px; height: 54px;">
+        style="background-color: #E88F84; width: 54px; height: 54px;">
         <i class="material-icons">text_format</i>
     </a>
 
     <!--Botones para la configuracion de la interfaz-->
     <a href="configuracion.html" data-target="slide-fontAdjust"
         class="border5 shadow2 white-text waves-effect waves-light buttonScreenAdjustMobile"
-        style="background-color: #77433d; width: 54px; height: 54px;">
+        style="background-color: #C2695F; width: 54px; height: 54px;">
         <i class="material-icons">settings</i>
     </a>
 
