--- a/unidad2.html
+++ b/unidad2.html
@@ -205,95 +205,77 @@
             <p class="textoTitulo white-text lateralMenuAdjustTextTitle">Secciones</p>
 
             <!--Inicio al sitio-->
-            <li><a contador="0" class="clbktx textoStandar clw border0 activeButtonTextLateral" href="unidad1.html"><i
-                        class="material-icons clbktx">looks_one</i>Inicio</a></li>
+            <li><a contador="0" class="clbktx textoStandar clw border0 activeButtonTextLateral">
+                <i class="material-icons clbktx">extension</i>Unidad de competencia</a>
+            </li>
 
+            <li><a contador="1" class="clbktx textoStandar clw border0">
+                <i class="material-icons clbktx">assessment</i>Evaluación de los aprendizajes</a>
+            </li>
 
-            <!--Primera seccion-->
-            <div class="mobileOptionsContainer containerSectionLateralMobileMenu clgreyl1 border0">
-                <div class="truncate waves-effect clbktx clgreyl2 titleSectionMobileMenu" id="primeraSeccion"><i
-                        class="material-icons" id="primeraSeccionIcon">expand_more</i><b>Introducción</b>
-                </div>
+            <li><a contador="2" class="clbktx textoStandar clw border0">Introducción</a></li>
 
-                <p contador="1"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx primeraSeccionHide">
-                    Introducción al recurso y contenido</p>
-            </div>
-
+            <!--Contenidos principales-->
             <div class="mobileOptionsContainer">
-                <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="manual.html"><i
-                            class="material-icons clbktx">sos</i>Manual de usuario</a></li>
-            </div>
+                <li contador="3" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="3" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.1 Innovación</a>
+                </li>
 
-            <!--Segunda seccion-->
-            <div class="mobileOptionsContainer containerSectionLateralMobileMenu clgreyl1 border0">
-                <div class="truncate waves-effect clbktx clgreyl2 titleSectionMobileMenu" id="segundaSeccion"><i
-                        class="material-icons" id="segundaSeccionIcon">expand_more</i><b>1.1 La empresa</b>
-                </div>
-                <p contador="2"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
-                    1.1 La empresa</p>
+                <li contador="4" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="4" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2 Design thinking metodología de innovación</a>
+                </li>
 
-                <p contador="3"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
-                    1.1.1 Constitución jurídica</p>
-                <p contador="4"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
-                    1.1.2 El área financiera en la estructura organizacional</p>
-            </div>
+                <li contador="5" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="5" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2.1 Empatizar con el usuario y explorar el mercado</a>
+                </li>
 
+                <li contador="6" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="6" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2.2 Definir necesidades del usuario</a>
+                </li>
 
+                <li contador="7" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="7" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2.3 Idear con propuesta de valor</a>
+                </li>
 
-            <div class="mobileOptionsContainer">
+                <li contador="8" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="8" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2.4 Prototipar la idea</a>
+                </li>
 
-                <li contador="5" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="5" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.2 Función y
-                        objetivo de las finanzas empresariales</a></li>
+                <li contador="9" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="9" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.2.5 Testeo (validar)</a>
+                </li>
 
-                <li contador="6" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="6" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.3 Las finanzas
-                        empresariales y su relación con otras disciplinas</a></li>
+                <li contador="10" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="10" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">2.3 Modelo de negocios Canvas</a>
+                </li>
 
-                <li contador="7" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="7" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.4 Factores del
-                        micro y macro ambiente que impactan a la empresa y a sus finanzas</a></li>
+                <!--Glosario-->
+                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="" class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html">
+                        <i class="material-icons clbktx">library_books</i>Glosario
+                    </a>
+                </li>
 
-                <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html"><i
-                            class="material-icons clbktx">library_books</i>Glosario</a></li>
+                <!--Material de apoyo-->
+                <li contador="11" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="11" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                        <i class="material-icons clbktx">auto_stories</i>Material de apoyo
+                    </a>
+                </li>
 
-                <li contador="8" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="8" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
-                            class="material-icons clbktx">auto_stories</i>Material de apoyo</a></li>
+                <!--Actividades-->
+                <li contador="12" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="12" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                        <i class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje
+                    </a>
+                </li>
 
-                <li contador="9" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="9" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
-                            class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje</a></li>
-
-                <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
-                        href="unidad2_evaluacion.html"><i class="material-icons clbktx">quiz</i>Evaluación</a></li>
-
-                <li contador="10" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="10" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
-                            class="material-icons clbktx">diversity_2</i>Cierre</a></li>
-
-
-                <li contador="11" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="11" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
-                        href="referencias.html"><i class="material-icons clbktx">format_quote</i>Referencias</a></li>
-
-                <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="contacto.html"><i
-                            class="material-icons clbktx">alternate_email</i>Contacto</a></li>
-
-
-
+                <!--Evaluación (link externo)-->
+                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                    <a contador="" class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="unidad2_evaluacion.html">
+                        <i class="material-icons clbktx">quiz</i>Evaluación
+                    </a>
+                </li>
             </div>
         </ul>
 
