--- a/unidad3.html
+++ b/unidad3.html
@@ -202,24 +202,6 @@
                                         <p class="deskOption clbktx">Evaluación</p>
                                     </div>
                                 </a>
-                                <a contador="10"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a5tutorialButton">
-                                    <i contador="10" class="deskOption material-icons clbktx">diversity_2</i>
-                                    <p contador="10" class="deskOption clbktx">Cierre de unidad temática</p>
-                                </a>
-
-                                <a contador=""
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a7tutorialButton" href="referencias.html">
-                                    <i contador="" class="deskOption material-icons clbktx">format_quote</i>
-                                    <p contador="" class="deskOption clbktx">Referencias</p>
-                                </a>
-                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a8tutorialButton" href="contacto.html">
-                                    <i contador="" class="deskOption material-icons clbktx">alternate_email</i>
-                                    <p contador="" class="deskOption clbktx">Contacto</p>
-                                </a>
                             </div>
                         </section>
                     </section>
@@ -231,96 +213,43 @@
         <ul id="slide-out" class="sidenav clw leftBorderUnit3Menu" style="padding: 10px;">
             <p class="textoTitulo white-text lateralMenuAdjustTextTitle">Secciones</p>
 
-            <!--Inicio al sitio-->
-            <li><a contador="0" class="clbktx textoStandar clw border0 activeButtonTextLateral" href="unidad1.html"><i
-                        class="material-icons clbktx">looks_one</i>Inicio</a></li>
-
-
-            <!--Primera seccion-->
-            <div class="mobileOptionsContainer containerSectionLateralMobileMenu clgreyl1 border0">
-                <div class="truncate waves-effect clbktx clgreyl2 titleSectionMobileMenu" id="primeraSeccion"><i
-                        class="material-icons" id="primeraSeccionIcon">expand_more</i><b>Introducción</b>
-                </div>
-
-                <p contador="1"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx primeraSeccionHide">
-                    Introducción al recurso y contenido</p>
-            </div>
-
             <div class="mobileOptionsContainer">
-                <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="manual.html"><i
-                            class="material-icons clbktx">sos</i>Manual de usuario</a></li>
-            </div>
+                <li><a contador="0" class="clbktx textoStandar clw border0">
+                    <i class="material-icons clbktx">extension</i>Unidad de competencia</a>
+                </li>
 
-            <!--Segunda seccion-->
-            <div class="mobileOptionsContainer containerSectionLateralMobileMenu clgreyl1 border0">
-                <div class="truncate waves-effect clbktx clgreyl2 titleSectionMobileMenu" id="segundaSeccion"><i
-                        class="material-icons" id="segundaSeccionIcon">expand_more</i><b>1.1 La empresa</b>
-                </div>
-                <p contador="2"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
-                    1.1 La empresa</p>
+                <li><a contador="1" class="clbktx textoStandar clw border0">
+                    <i class="material-icons clbktx">assessment</i>Evaluación de los aprendizajes</a>
+                </li>
 
-                <p contador="3"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
-                    1.1.1 Constitución jurídica</p>
-                <p contador="4"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
-                    1.1.2 El área financiera en la estructura organizacional</p>
-            </div>
+                <li><a contador="2" class="clbktx textoStandar clw border0">Introducción</a></li>
 
+                <li><a contador="3" class="clbktx textoStandar clw border0">3.1 Plan de gestión para la dirección del proyecto</a></li>
+                <li><a contador="4" class="clbktx textoStandar clw border0">3.1.1 Gestión de Integración del proyecto</a></li>
+                <li><a contador="5" class="clbktx textoStandar clw border0">3.1.2 Gestión del conocimiento</a></li>
+                <li><a contador="6" class="clbktx textoStandar clw border0">3.2 Plan de desarrollo del software</a></li>
+                <li><a contador="7" class="clbktx textoStandar clw border0">3.2.1 Actividades para el análisis de requerimientos y diseño</a></li>
+                <li><a contador="8" class="clbktx textoStandar clw border0">3.2.2 Actividades para la programación</a></li>
+                <li><a contador="9" class="clbktx textoStandar clw border0">3.2.3 Actividades para las pruebas e implementación</a></li>
+                <li><a contador="10" class="clbktx textoStandar clw border0">3.2.4 Actividades para el despliegue y mantenimiento</a></li>
+                <li><a contador="11" class="clbktx textoStandar clw border0">3.2.5 Documentación</a></li>
+                <li><a contador="12" class="clbktx textoStandar clw border0">3.3 Gestión de sostenibilidad</a></li>
 
+                <li><a contador="" class="clbktx textoStandar clw border0" href="SuperGlosario.html">
+                    <i class="material-icons clbktx">library_books</i>Glosario</a>
+                </li>
 
-            <div class="mobileOptionsContainer">
+                <li><a contador="13" class="clbktx textoStandar clw border0">
+                    <i class="material-icons clbktx">auto_stories</i>Material de apoyo</a>
+                </li>
 
-                <li contador="5" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="5" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.2 Función y
-                        objetivo de las finanzas empresariales</a></li>
+                <li><a contador="14" class="clbktx textoStandar clw border0">
+                    <i class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje</a>
+                </li>
 
-                <li contador="6" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="6" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.3 Las finanzas
-                        empresariales y su relación con otras disciplinas</a></li>
-
-                <li contador="7" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="7" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.4 Factores del
-                        micro y macro ambiente que impactan a la empresa y a sus finanzas</a></li>
-
-                <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html"><i
-                            class="material-icons clbktx">library_books</i>Glosario</a></li>
-
-                <li contador="8" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="8" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
-                            class="material-icons clbktx">auto_stories</i>Material de apoyo</a></li>
-
-                <li contador="9" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="9" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
-                            class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje</a></li>
-
-                <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
-                        href="unidad3_evaluacion.html"><i class="material-icons clbktx">quiz</i>Evaluación</a></li>
-
-                <li contador="10" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="10" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
-                            class="material-icons clbktx">diversity_2</i>Cierre</a></li>
-
-
-                <li contador="11" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        contador="11" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
-                        href="referencias.html"><i class="material-icons clbktx">format_quote</i>Referencias</a></li>
-
-                <!--Pagina externa-->
-                <li contador="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a contador=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="contacto.html"><i
-                            class="material-icons clbktx">alternate_email</i>Contacto</a></li>
-
-
-
+                <li><a contador="" class="clbktx textoStandar clw border0" href="unidad3_evaluacion.html">
+                    <i class="material-icons clbktx">quiz</i>Evaluación</a>
+                </li>
             </div>
         </ul>
 
